--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ h2 {
 }
 
 h3 {
-    font-size: 4em;
+    font-size: 3em;
     font-weight: 200; /* Thin */
     letter-spacing: 1px;
     line-height: 1em;
@@ -212,13 +212,20 @@ aside.sidebar {
 
 aside.sidebar ul {
     padding: 0.5em 0 2em 0;
+    counter-reset: counter-section;
 }
 
 aside.sidebar ul li {
     color: rgba(0, 0, 0, 0.4);
     list-style: none;
     margin: 0;
-    padding: 0 0 0.825em 0;
+    padding: 0 0 0.525em 0;
+}
+
+aside.sidebar ul li::after{
+    counter-increment: counter-section;
+    content: counter(counter-section);
+    padding-left: 5px;
 }
 
 footer {
